overflow fixed on mobile view

--- a/src/components/WeatherCart/WeatherCard.css
+++ b/src/components/WeatherCart/WeatherCard.css
@@ -6,6 +6,7 @@
   grid-template-columns: repeat(6, minmax(150px, 1fr));
   gap: 2rem;
   align-items: end;
+  overflow: auto;
 }
 .weather-card-container > div {
   display: flex;
